Organized into classes

--- a/Dialer Team Record Keeping/Dialer Team Record Keeping.csproj
+++ b/Dialer Team Record Keeping/Dialer Team Record Keeping.csproj
@@ -61,6 +61,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Formatting.cs" />
+    <Compile Include="WrapReport.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,12 +71,19 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Calculations.cs" />
+    <Compile Include="Converters.cs" />
+    <Compile Include="Events.cs" />
+    <Compile Include="ExcelReaderInterop.cs" />
+    <Compile Include="FileReadWrite.cs" />
+    <Compile Include="ListProgressData.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OutlookWriterInterop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
